--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: RedisLearninig/Frontend
+        working-directory: Frontend
 
       - name: Build frontend
         run: npm run build --if-present
-        working-directory: RedisLearninig/Frontend
+        working-directory: Frontend
